--- a/codelab1.html
+++ b/codelab1.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CODELAB1</title>
     <script src="codelab1.js"></script>
 </head>
 <body>
     <h1>Penjumlahan Bilangan</h1>
     <form id="calculator">
-        <p>Masukan Bilangan Pertama</p>
+        <label>Masukan Bilangan Pertama</label>
         <input type="number" id="number1" placeholder="" required>
-        <p>Masukan Bilangan Kedua</p>
-        <input type="number" id="number2" placeholder="" required> <br>
+        <label>Masukan Bilangan Kedua</label>
+        <input type="number" id="number2" placeholder="" required> <br> <br>
         <button type="button" onclick="tambah()">Jumlahkan</button>
         <button type="button" onclick="resetForm()">Ulang</button>
     </form>
